--- a/assets/css/style_custom.css
+++ b/assets/css/style_custom.css
@@ -36,6 +36,13 @@ h3 {
     font-variant: small-caps;
 }
 
+p {
+    text-align: left;
+    max-width: 100%;
+    margin: auto;
+    padding-bottom: calc(10px + (15 - 10) * ((100vw - 300px) / (1600 - 300)));
+}
+
 /* links */
 a.label.label-primary  {
     background-color: #c9c9c9;
